# sprig

./: .gitignore  Makefile  README.md  agents.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/sprig/: __init__.py  cli.py
tests/: test_cli.py
